[project]
name = "styx-runtime-py"
version = "0.0.0"
description = "Python runtime and integrations for Styx (workspace root)."
requires-python = ">=3.10"
# Workspace root is not published; deps live in member packages.
dependencies = []

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "mypy>=1.18.2",
  "pre-commit>=4.4.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.6",
  "deptry>=0.24.0",
]
docs = ["pdoc>=16.0.0"]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
styxdefs = { workspace = true }
styxgraph = { workspace = true }
styxcache = { workspace = true }
styxcontainer-common = { workspace = true }
styxdocker = { workspace = true }
styxpodman = { workspace = true }
styxsingularity = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = ["--import-mode=importlib"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["ANN", "D100", "D101", "D102", "D103", "D104"]
